# ppx_inline_test

./: README.md  ppx_inline_test.opam
config/: dune
drop/: dune
example/: dune  example.ml
libname/: dune
runner/: dune
runner/lib/: dune
runtime-lib/: am_testing.c  dune  ppx_inline_test_lib.ml  runtime.js  search_pattern.ml  search_pattern.mli
src/: dune  ppx_inline_test.ml
