(env
 (dev
  (flags
   (:standard -warn-error -32))))

(library
 (name ppx_inline_test_lib)
 (modules ppx_inline_test_lib search_pattern)
 (public_name ppx_inline_test.runtime-lib)
 (libraries inline_test_config mtime mtime.clock.os)
 (js_of_ocaml
  (flags --no-sourcemap)
  (javascript_files runtime.js))
 (c_names am_testing)
 (ocamlopt_flags
  (:standard -linkall))
 (preprocess no_preprocessing))
